# bottleneck-bots

./: .claude-state.json  .env.example  .env.vercel.example  .eslintrc.json  .gitignore  .vercelignore  BROWSERBASE_GHL_SETUP.md  BROWSER_AGENT_GAP_ANALYSIS.md  BROWSER_AGENT_IMPLEMENTATION_LOG.md  BROWSER_SESSIONS_COMPLETION.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_VERIFICATION_REPORT.md  LOAD_TEST_RESULTS.md  MEMORY_CLEANUP_IMPLEMENTATION.md  PASSWORD_RESET_IMPLEMENTATION.md  PRODUCTION_READINESS_REPORT.md  QA_HEALTH_ENDPOINT_ANALYSIS.md  QA_PRELAUNCH_REPORT.md  QA_PRELAUNCH_SUMMARY.md  QA_TESTING_README.md  README.md  SECURITY_AUDIT_EXECUTIVE_SUMMARY.md  SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_SUMMARY.md  SECURITY_FINAL_AUDIT.md  SECURITY_REMEDIATION.md  SECURITY_REVIEW.md  SENTRY_INTEGRATION.md  START_HERE.md  STRIPE_WEBHOOK_FIX.md  TEST_SUMMARY.md  VERCEL_DEPLOYMENT.md  VERIFICATION_README.md  VERIFICATION_SUMMARY.md  docker-compose.yml  drizzle.config.ts  eslint.config.js  middleware.ts  migrate-schema.js  migrate-schema.mjs  (+13 more)
.bubba/: STATUS.md  TECH-STACK.md
.planning/: PROJECT.md  ROADMAP.md  STATE.md  config.json
app/: globals.css  layout.tsx  page.tsx
client/: index.html  package.json  tsconfig.json
components/: error-boundary.tsx  notifications-dropdown.tsx
docker/: docker-compose.dev.yml  docker-compose.prod.yml
sdk/python/: README.md  pyproject.toml
sdk/python/src/orgo_clone/: __init__.py  agent.py  client.py  computer.py  exceptions.py  types.py  workspace.py
sdk/python/tests/: test_client.py  test_computer.py  test_exceptions.py
(+883 files in other folders)
