[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bottleneck-bots"
version = "0.1.0"
description = "Python SDK for Bottleneck Bots — cloud desktop environments for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "AI Acrobatics", email = "julian@ai-acrobatics.com" }]
dependencies = [
    "httpx>=0.28",
    "websockets>=13.0",
]

[project.optional-dependencies]
vision = ["Pillow>=10.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/orgo_clone"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
